adapt the suggestion

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ build:
   skip: true  # [win or cuda_compiler_version not in ("11.2", "None")]
   skip: true  # [mpi == "openmpi" and cuda_compiler_version != "None"]
   skip: true  # [double == "yes" and cuda_compiler_version != "None"]
-  skip: true  # [mpi == "openmpi" and osx and arm64]
+  skip: true  # [mpi == "openmpi" and arm64]
 
 requirements:
   build:
