Try new cuda approach

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,5 +4,6 @@ mpi:
 double:
   - no
   - yes
-cuda_compiler_version_min:
-  - 12.1                       # [linux or win64]
+cuda:
+  - no
+  - yes
