--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ requirements:
     - make
     - {{ compiler('cxx') }}
     - {{ stdlib("c") }}
-    - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
+    - {{ compiler('cuda') }} >=12.1  # [cuda == "yes"]
     - {{ stdlib("c") }}
     - cmake >=3.28
     - pocl
@@ -44,24 +44,22 @@ requirements:
     - perl
     - libgomp  # [linux]
     - llvm-openmp  # [osx]
-    - coreutils  # [cuda_compiler_version != "None"]
-    - cudatoolkit >=12.1  # [cuda_compiler_version != "None"]
-    - libcufft  # [cuda_compiler_version != "None"]
+    - coreutils  # [cuda == "yes"]
   host:
-    - ocl-icd  # [linux and cuda_compiler_version == "None"]
+    - ocl-icd  # [linux and cuda == "no"]
     - khronos-opencl-icd-loader  # [osx]
     - libhwloc 2.*
     - fftw
     - {{ mpi }}  # [mpi != 'nompi']
+    - libcufft-dev  # [cuda == "no"]
+    - cuda_version={{ cuda_compiler_version }}
   run:
-    - ocl-icd  # [linux and cuda_compiler_version == "None"]
+    - ocl-icd  # [linux and cuda == "no"]
     - khronos-opencl-icd-loader  # [osx]
     - ocl_icd_wrapper_apple  # [osx]
     - fftw
     - libhwloc 2.*
     - {{ mpi }}  # [mpi != 'nompi']
-    - __cuda  # [not osx and cuda_compiler_version != "None"]
-
 test:
   commands:
     - gmx -version  # [mpi == 'nompi' and double == 'no']
